--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -156,17 +156,24 @@ ul {
 
 ::-moz-selection {
   color: white;
-  background-color: var.$tertiary-color;
+  background-color: var.$color-text-light;
+  @media (prefer-color-scheme: dark) {
+    color: var.$color-text-dark;
+    background-color: white;
+  }
 }
 
 ::selection {
   color: white;
-  background-color: var.$tertiary-color;
+  background-color: var.$color-text-light;
+  @media (prefer-color-scheme: dark) {
+    color: var.$color-text-dark;
+    background-color: white;
+  }
 }
 
 /* Set font-family, base font-size and line-height */
 
 body {
-  @include var.font-modifier(var.$font-base, var.$font-size-base, normal, 400);
   line-height: 1.5;
 }
