--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -30,6 +30,8 @@ body {
     z-index: 0;
     transition: all 0.5s ease-in-out;
     position: relative;
+    height: fit-content;
+    height: -moz-fit-content;
 
     &,
     img {
@@ -41,10 +43,12 @@ body {
       padding: 1.5em 1em;
       bottom: 0;
       width: 100%;
-      border-radius: 2em;
+      border-radius: 3em;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
       background: transparent;
       color: transparent;
-      font-size: 1.1rem;
+      font-size: 1rem;
       transition: all 500ms ease-in-out;
       opacity: 0;
     }
