--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -78,3 +78,50 @@ h2 {
   text-transform: uppercase;
   margin-bottom: 1em;
 }
+
+.absolute {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    pointer-events: none;
+}
+.relative {
+    position: relative;
+    z-index: 50;
+    width: 100%;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex {
+    position: absolute;
+    z-index: 50;
+    display: flex;
+
+    .text-white {
+        color: white;
+    }
+
+    .w-full {
+        width: 100%;
+        height: 100%;
+        fill: currentColor
+    }
+
+    .text-gray {
+        width: 100%;
+        height: 100%;
+        fill: currentColor;
+        color: gray
+    }
+
+    .text-4xl.font-bold {
+        font-size: 4rem;
+        font-weight: bold;
+        text-align: center;
+    }
+}
