--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -80,48 +80,122 @@ h2 {
 }
 
 .absolute {
-    position: absolute;
-    inset: 0;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    pointer-events: none;
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  pointer-events: none;
 }
 .relative {
-    position: relative;
-    z-index: 50;
-    width: 100%;
-    background: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: relative;
+  z-index: 50;
+  width: 100%;
+  background: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .flex {
-    position: absolute;
-    z-index: 50;
-    display: flex;
+  position: absolute;
+  z-index: 50;
+  display: flex;
 
-    .text-white {
-        color: white;
-    }
+  .text-white {
+    color: white;
+  }
 
-    .w-full {
-        width: 100%;
-        height: 100%;
-        fill: currentColor
-    }
+  .w-full {
+    width: 100%;
+    height: 100%;
+    fill: currentColor;
+  }
 
-    .text-gray {
-        width: 100%;
-        height: 100%;
-        fill: currentColor;
-        color: gray
-    }
+  .text-gray {
+    width: 100%;
+    height: 100%;
+    fill: currentColor;
+    color: gray;
+  }
 
-    .text-4xl.font-bold {
-        font-size: 4rem;
-        font-weight: bold;
-        text-align: center;
+  .text-4xl.font-bold {
+    font-size: 4rem;
+    font-weight: bold;
+    text-align: center;
+  }
+}
+
+.darkbackground {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: hsl(0 0% 0% / 0.5);
+  inset: 0;
+  z-index: 100;
+}
+
+.container-card {
+  width: 100%;
+  max-width: 900px;
+  margin-inline: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2em;
+  background: rgba(28, 33, 40, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+  border-radius: 10px;
+  padding: 1em 3em 2em 3em;
+  border-radius: 3em;
+}
+
+.imgContainer {
+  width: 100%;
+  max-height: 500px;
+
+  img {
+    width: 100%;
+    max-height: 500px;
+    object-fit: contain;
+    object-position: center;
+  }
+}
+
+.textContainer {
+  margin-top: 3em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  button {
+    align-self: flex-end;
+    margin-top: 1em;
+    padding: 0.8em;
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-radius: 1em;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    color: white;
+    transition: all 0.5s ease-in-out;
+
+    &:hover {
+      background: rgba(14, 14, 14, 0.25);
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      backdrop-filter: blur(4px);
+      -webkit-backdrop-filter: blur(4px);
+      border-radius: 10px;
+      border: 1px solid rgba(255, 255, 255, 0.18);
     }
+  }
 }
