--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -32,6 +32,8 @@ body {
     position: relative;
     height: fit-content;
     height: -moz-fit-content;
+    position: relative;
+
 
     &,
     img {
@@ -43,20 +45,26 @@ body {
       padding: 1.5em 1em;
       bottom: 0;
       width: 100%;
-      border-radius: 3em;
+      border-radius: 2em;
       border-top-left-radius: 0;
       border-top-right-radius: 0;
       background: transparent;
       color: transparent;
-      font-size: 1rem;
+      font-size: 1.4rem;
+      max-height: 200px;
+      overflow: scroll;
       transition: all 500ms ease-in-out;
       opacity: 0;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
 
     &:hover {
       transform: scale(1.2);
       z-index: 2;
-
+      
       .overview {
         background: rgba(0, 28, 98, 0.6);
         box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -200,6 +208,31 @@ h2 {
       -webkit-backdrop-filter: blur(4px);
       border-radius: 10px;
       border: 1px solid rgba(255, 255, 255, 0.18);
+    }
+  }
+}
+
+.search-form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2em;
+
+  input {
+    padding: 0.5em;
+    background: rgba(90, 105, 129, 0.4);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    border-radius: 2em;
+    font-weight: 500;
+
+    &::placeholder {
+      color: #1c2027;
+      font-weight: 600;
     }
   }
 }
